// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueListActions Bulk Total results < bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <span>
      3 issues on this page selected.
      <a
        onClick={[Function]}
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Select all 
          </span>
          <span
            key="2"
          >
            600
          </span>
          <span
            key="3"
          >
             issues that match this search query.
          </span>
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`IssueListActions Bulk Total results < bulk limit bulk resolves 1`] = `
<ModalDialog
  bsClass="modal"
  className="in"
  onClick={[Function]}
  role="document"
  style={Object {}}
  tabIndex="-1"
>
  <div
    className="in modal"
    onClick={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
        role="document"
      >
        <div
          className="modal-body"
        >
          <div>
            <p
              style={
                Object {
                  "marginBottom": "20px",
                }
              }
            >
              <strong>
                <span
                  key="8"
                >
                  <span
                    key="0"
                  >
                    Are you sure you want to 
                  </span>
                  <span
                    key="2"
                  >
                    resolve
                  </span>
                  <span
                    key="3"
                  >
                     all 
                  </span>
                  <span
                    key="5"
                  >
                    600
                  </span>
                  <span
                    key="6"
                  >
                     issues that match the search?
                  </span>
                </span>
              </strong>
            </p>
            <ExtraDescription
              all={true}
              query=""
              queryCount={600}
            >
              <p
                className="error"
              >
                <strong>
                  <span
                    key="5"
                  >
                    <span
                      key="0"
                    >
                      This will apply to all 
                    </span>
                    <span
                      key="2"
                    >
                      600
                    </span>
                    <span
                      key="3"
                    >
                       issues matched in this project!
                    </span>
                  </span>
                </strong>
              </p>
            </ExtraDescription>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <Button
            align="center"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <StyledButton
              aria-disabled={false}
              aria-label="Cancel"
              disabled={false}
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <ForwardRef
                aria-disabled={false}
                aria-label="Cancel"
                className="css-4gvaqq-StyledButton-getColors edwq9my0"
                disabled={false}
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <button
                  aria-disabled={false}
                  aria-label="Cancel"
                  className="css-4gvaqq-StyledButton-getColors edwq9my0"
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <ButtonLabel
                    align="center"
                  >
                    <Component
                      align="center"
                      className="css-oo1m2a-ButtonLabel edwq9my1"
                    >
                      <span
                        className="css-oo1m2a-ButtonLabel edwq9my1"
                      >
                        Cancel
                      </span>
                    </Component>
                  </ButtonLabel>
                </button>
              </ForwardRef>
            </StyledButton>
          </Button>
          <Button
            align="center"
            autoFocus={true}
            data-test-id="confirm-button"
            disabled={false}
            onClick={[Function]}
            priority="primary"
          >
            <StyledButton
              aria-disabled={false}
              aria-label="Bulk resolve issues"
              autoFocus={true}
              data-test-id="confirm-button"
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
            >
              <ForwardRef
                aria-disabled={false}
                aria-label="Bulk resolve issues"
                autoFocus={true}
                className="css-xiynrq-StyledButton-getColors edwq9my0"
                data-test-id="confirm-button"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
              >
                <button
                  aria-disabled={false}
                  aria-label="Bulk resolve issues"
                  autoFocus={true}
                  className="css-xiynrq-StyledButton-getColors edwq9my0"
                  data-test-id="confirm-button"
                  onClick={[Function]}
                  role="button"
                >
                  <ButtonLabel
                    align="center"
                    priority="primary"
                  >
                    <Component
                      align="center"
                      className="css-oo1m2a-ButtonLabel edwq9my1"
                      priority="primary"
                    >
                      <span
                        className="css-oo1m2a-ButtonLabel edwq9my1"
                      >
                        Bulk resolve issues
                      </span>
                    </Component>
                  </ButtonLabel>
                </button>
              </ForwardRef>
            </StyledButton>
          </Button>
        </div>
      </div>
    </div>
  </div>
</ModalDialog>
`;

exports[`IssueListActions Bulk Total results < bulk limit can bulk select 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <strong>
      <span
        key="5"
      >
        <span
          key="0"
        >
          Selected all 
        </span>
        <span
          key="2"
        >
          600
        </span>
        <span
          key="3"
        >
           issues that match this search query.
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`IssueListActions Bulk Total results > bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <span>
      3 issues on this page selected.
      <a
        onClick={[Function]}
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Select the first 
          </span>
          <span
            key="2"
          >
            1,000
          </span>
          <span
            key="3"
          >
             issues that match this search query.
          </span>
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`IssueListActions Bulk Total results > bulk limit bulk resolves 1`] = `
<ModalDialog
  bsClass="modal"
  className="in"
  onClick={[Function]}
  role="document"
  style={Object {}}
  tabIndex="-1"
>
  <div
    className="in modal"
    onClick={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
        role="document"
      >
        <div
          className="modal-body"
        >
          <div>
            <p
              style={
                Object {
                  "marginBottom": "20px",
                }
              }
            >
              <strong>
                <span
                  key="8"
                >
                  <span
                    key="0"
                  >
                    Are you sure you want to 
                  </span>
                  <span
                    key="2"
                  >
                    resolve
                  </span>
                  <span
                    key="3"
                  >
                     the first 
                  </span>
                  <span
                    key="5"
                  >
                    1,000
                  </span>
                  <span
                    key="6"
                  >
                     issues that match the search?
                  </span>
                </span>
              </strong>
            </p>
            <ExtraDescription
              all={true}
              query=""
              queryCount={1500}
            >
              <p
                className="error"
              >
                <strong>
                  <span
                    key="5"
                  >
                    <span
                      key="0"
                    >
                      This will apply to the first 
                    </span>
                    <span
                      key="2"
                    >
                      1,000
                    </span>
                    <span
                      key="3"
                    >
                       issues matched in this project!
                    </span>
                  </span>
                </strong>
              </p>
            </ExtraDescription>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <Button
            align="center"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <StyledButton
              aria-disabled={false}
              aria-label="Cancel"
              disabled={false}
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <ForwardRef
                aria-disabled={false}
                aria-label="Cancel"
                className="css-4gvaqq-StyledButton-getColors edwq9my0"
                disabled={false}
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <button
                  aria-disabled={false}
                  aria-label="Cancel"
                  className="css-4gvaqq-StyledButton-getColors edwq9my0"
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <ButtonLabel
                    align="center"
                  >
                    <Component
                      align="center"
                      className="css-oo1m2a-ButtonLabel edwq9my1"
                    >
                      <span
                        className="css-oo1m2a-ButtonLabel edwq9my1"
                      >
                        Cancel
                      </span>
                    </Component>
                  </ButtonLabel>
                </button>
              </ForwardRef>
            </StyledButton>
          </Button>
          <Button
            align="center"
            autoFocus={true}
            data-test-id="confirm-button"
            disabled={false}
            onClick={[Function]}
            priority="primary"
          >
            <StyledButton
              aria-disabled={false}
              aria-label="Bulk resolve issues"
              autoFocus={true}
              data-test-id="confirm-button"
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
            >
              <ForwardRef
                aria-disabled={false}
                aria-label="Bulk resolve issues"
                autoFocus={true}
                className="css-xiynrq-StyledButton-getColors edwq9my0"
                data-test-id="confirm-button"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
              >
                <button
                  aria-disabled={false}
                  aria-label="Bulk resolve issues"
                  autoFocus={true}
                  className="css-xiynrq-StyledButton-getColors edwq9my0"
                  data-test-id="confirm-button"
                  onClick={[Function]}
                  role="button"
                >
                  <ButtonLabel
                    align="center"
                    priority="primary"
                  >
                    <Component
                      align="center"
                      className="css-oo1m2a-ButtonLabel edwq9my1"
                      priority="primary"
                    >
                      <span
                        className="css-oo1m2a-ButtonLabel edwq9my1"
                      >
                        Bulk resolve issues
                      </span>
                    </Component>
                  </ButtonLabel>
                </button>
              </ForwardRef>
            </StyledButton>
          </Button>
        </div>
      </div>
    </div>
  </div>
</ModalDialog>
`;

exports[`IssueListActions Bulk Total results > bulk limit can bulk select 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <strong>
      <span
        key="5"
      >
        <span
          key="0"
        >
          Selected up to the first 
        </span>
        <span
          key="2"
        >
          1,000
        </span>
        <span
          key="3"
        >
           issues that match this search query.
        </span>
      </span>
    </strong>
  </div>
</div>
`;
